# django-flex-user

./: .bumpversion.cfg  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  README.rst  heroku.sh  release-tasks.sh  requirements.txt  setup.cfg  tox.ini
.github/workflows/: coverage.yml  django.yml  tests.yml
django_flex_user/: admin.py  apps.py  backends.py  fields.py  forms.py  models.py  serializers.py  urls.py  util.py  validators.py  verification.py  views.py
django_flex_user/migrations/: 0001_initial.py  0002_emailtoken_phonetoken.py
django_flex_user/models/: __init__.py  flex_user.py  otp.py  user.py
django_flex_user/templates/account/: log-in.html  register.html
django_flex_user/tests/: test_util.py
django_flex_user/tests/auth/: test_authenticate.py
django_flex_user/tests/models/: test_email_token.py  test_phone_token.py  test_user_manager.py  (+2 more)
docs/: conf.py  index.rst
docs/source/: basic_configuration.rst  basic_usage.rst  before_you_begin.rst  conf.py  index.rst  installation.rst  oauth.rst  oauth_configuration.rst  overview.rst  reference_implementation.rst  reference_project.rst  rest_api.rst  rest_api_configuration.rst  usage.rst
test_project/: forms.py  settings.py  urls.py  verification.py  views.py
test_project/components/: __init__.py  base.py  django_environ.py  django_flex_user.py  django_phonenumber_field.py  djangorestframework.py  drf_multiple_model.py  sendgrid.py  settings.py  social_auth_app_django.py  social_auth_app_django_spa.py
test_project/settings/: settings.py
(+53 files in other folders)
